--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@coding-blocks/motley": "0.3.44",
     "ember-line-clamp": "^0.2.15",
     "moment": "^2.22.2",
+    "node": "^8.10.0",
     "showdown-katex-studdown": "^0.4.0"
   },
   "ember-addon": {
